Update Sw for OrdController (#131)
* Update Sw for OrdController

* Update OrderController.java

* Update OrderController.java

---------

Co-authored-by: Mykhaylo Moisyeyenko <moiceenko.mihail@gmail.com>